# Assignments

Sheet 01/: CMakeLists.txt  main.cpp
Sheet 01/include/headers/: PRO_01.h  PRO_02.h  PRO_03.h  PRO_04.h  PRO_05.h  PRO_06.h  PRO_07.h  PRO_08.h  PRO_09.h  PRO_10.h
Sheet 01/include/sources/: PRO_01.cpp  PRO_02.cpp  PRO_03.cpp  PRO_04.cpp  PRO_05.cpp  PRO_06.cpp  PRO_07.cpp  PRO_08.cpp  PRO_09.cpp  PRO_10.cpp
