cmake_minimum_required(VERSION 3.26)
project(Sheet_01)

set(CMAKE_CXX_STANDARD 17)

add_executable(Sheet_01 main.cpp include/headers/PRO_01.h include/sources/PRO_01.cpp
        include/sources/PRO_01.cpp
        include/headers/PRO_02.h
        include/sources/PRO_02.cpp
        include/sources/PRO_03.cpp
        include/headers/PRO_04.h
        include/sources/PRO_04.cpp
        include/sources/PRO_05.cpp
        include/sources/PRO_06.cpp
        include/sources/PRO_07.cpp
        include/headers/PRO_08.h
        include/sources/PRO_08.cpp
        include/sources/PRO_09.cpp
        include/sources/PRO_10.cpp)
